duniverse/alcotest/test/e2e/alcotest/failing/unknown_option.ml
let () =
  Alcotest.run __FILE__
    [ ("alpha", [ Alcotest.test_case "1" `Quick (fun () -> ()) ]) ]
